// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Toggle Select Theme dark theme is disabled 1`] = `
.c0 {
  position: relative;
  display: block;
  width: calc((1.4rem * 2) + 8px);
  height: calc(1.4rem + 8px);
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: #fff;
  border-radius: 1.4rem;
  cursor: pointer;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.c3:before {
  content: "☀️";
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  top: 4px;
  left: 4px;
  width: 1.4rem;
  height: 1.4rem;
  font-size: 0.7rem;
  line-height: 0px;
  background-color: white;
  border-radius: 50%;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.c1 {
  opacity: 0;
  width: 0;
  height: 0;
}

.c1:checked + .c2::before {
  content: '🌙';
  -webkit-transform: translateX(1.4rem);
  -ms-transform: translateX(1.4rem);
  transform: translateX(1.4rem);
}

<label
  className="c0"
>
  <input
    className="c1"
    defaultChecked={false}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="slider c2 c3"
  />
</label>
`;

exports[`should render Toggle Select Theme dark theme is on 1`] = `
.c0 {
  position: relative;
  display: block;
  width: calc((1.4rem * 2) + 8px);
  height: calc(1.4rem + 8px);
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: #fff;
  border-radius: 1.4rem;
  cursor: pointer;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.c3:before {
  content: "☀️";
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  top: 4px;
  left: 4px;
  width: 1.4rem;
  height: 1.4rem;
  font-size: 0.7rem;
  line-height: 0px;
  background-color: white;
  border-radius: 50%;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.c1 {
  opacity: 0;
  width: 0;
  height: 0;
}

.c1:checked + .c2::before {
  content: '🌙';
  -webkit-transform: translateX(1.4rem);
  -ms-transform: translateX(1.4rem);
  transform: translateX(1.4rem);
}

<label
  className="c0"
>
  <input
    className="c1"
    defaultChecked={true}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="slider c2 c3"
  />
</label>
`;
